web-infras/parser/tests/fixtures/babel/es2015/uncategorised/127/output.txt
[SyntaxError]: Class constructor may not be a generator. (1,12)
1|class A { *constructor() {} }
 |          ^
